--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
 	</properties>
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.bonitasoft.custompage</groupId>
-	<artifactId>WorkshopTruck</artifactId>
+	<artifactId>bonita-workshoptruck</artifactId>
 	<version>1.0.0</version>
 
 	<dependencies>
